fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
     line-height: 2;
-    background: #fff;
+    background: #fff
 }
 
 a{
@@ -27,32 +27,57 @@ ul{
 img{
     max-width: 100%;
 }
+
 /* Hero */
 .hero{
-    margin-top: -550px;
+    margin-top: -525px;
 }
+.hero .content{
+    background-color: #fff;
+    width: 150%;
+    padding: 15px;
+    border-radius: 25px;
+}
+
+/* Projects */
+.projects{
+    padding: 300px;
+    margin: auto;
+}
+
+.projects .title{
+    font-size: 2rem;
+    line-height: 1.2;
+    font-weight: 600;
+    text-align: center;
+}
+
 /* Utility */
 .navbar .container{
     display: flex;
     flex-direction: column;
+    align-items: baseline;
 }
+
 .navbar .main-menu ul{
     list-style: none;
-    display: flex;
-    padding: 10px 20px;
     display: block;
+}
+
+.navbar ul li a{
+    padding: 10px 20px;
     font-weight: 600;
     font-size: 25px;
     transition: 0.5s;
 }
 
 .navbar ul li a:hover{
-    color: var(--primary--color)
+    color: white
 }
 
 .navbar{
-    max-width: 1100px;
     padding: 75px;
+    margin-left: -600px;
 }
 
 .container{
@@ -63,10 +88,10 @@ img{
 
 /* Text */
 .intro-title-xxl{
+    
     font-size: 3rem;
     line-height: 1.2;
     font-weight: 600;
-    margin: 40px 0 20px;
 }
 
 .intro-text{
@@ -74,10 +99,20 @@ img{
     line-height: 1.5;
     font-weight: 300;
     margin: 20px 0 30px;
+
 }
 
 .fun-facts-text{
+   
     font-size: 1rem;
     line-height: 1.5;
     font-weight: 300;
+}
+
+/* individual projects */
+.twoeightbank{
+    background-color: #fff;
+    color: #000;
+    border-radius: 10px;
+    padding: 20px;
 }
